[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-tools"
version = "1.0.0"
readme = "README.md"

[tool.hatch.build.targets.sdist]
include = [
  "/scripts",
  "/tests",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=tic_tac_toe",
    "--cov-report=xml",
    "--cov-report=term"
]

[tool.mypy]
strict = true
